[package]
name = "storage"
version = "0.1.0"
authors = ["tsvi <tsvi.sabo@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.22"
iota-lib-rs = "0.4"
async-std = { version = "1.4.0", features = [ "attributes" ] }
serde = "1.0.104"

[lib]
name = "storage"
path = "src/mod.rs"


